[package]
name = "kanils"
version = "1.0.2"
authors = ["The FrugalOS Developers"]
description = "Kind and Nice tool for Lump Storage"
homepage = "https://github.com/frugalos/kanils"
repository = "https://github.com/frugalos/kanils"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
cannyls = "^0.9"
clap = "2"
fibers = "^0.1.12"
fibers_global = "^0.1.0"
fibers_http_server = "^0.1.9"
futures = "^0.1.25"
prometrics = "^0.1.11"
structopt = "^0.2.11"
trackable = "^0.2.20"
rustyline = "2"
regex = "1"

[dev-dependencies]
tempdir = "^0.3.7"